Try to fix issue with mobile screen not showing correctly

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -47,7 +47,7 @@
 .bar {
   height: 3px;
   width: 100%;
-  background-color: currentColor;
+  background-color: var(--fg);
   border-radius: 2px;
   transition: all 200ms ease;
 }
